fixed overflow issue

--- a/scss/layout/_comingSoon.scss
+++ b/scss/layout/_comingSoon.scss
@@ -5,8 +5,6 @@
 
 // coming-soon
 .coming-soon {
-  height: 100vh;
-
   &__content {
     @include mix.maxWidthSm;
     @include mix.sectionSpacing;
